samples/task/valid/R42.dita
<?xml version="1.0" encoding="UTF-8"?>
<task>
  <title>Test Title</title>
  <shortdesc>Short description</shortdesc>
  <prolog/>
  <taskbody>
    <steps><step><cmd/></step></steps>
    <postreq><p>This is a paragraph in postreq.</p><ul><li>Item</li></ul></postreq>
  </taskbody>
</task>