samples/task/invalid/R50.dita
<?xml version="1.0" encoding="UTF-8"?>
<task>
  <title>Test Title</title>
  <shortdesc>Short description</shortdesc>
  <prolog/>
  <taskbody>
    <steps><step><cmd/></step></steps>
    <postreq>Direct text in postreq is not allowed.</postreq>
  </taskbody>
</task>